--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
         Type: {{ truck.category.food_type }}
       </p>
       <p>
-        Latitude: {{ truck.location.latitude }}<br>
-        Longitude: {{ truck.location.longitude }}
+        Latitude: {{ truck.latitude }}<br>
+        Longitude: {{ truck.longitude }}
       </p>
     </blockquote>
   </div>
