--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{{ request.user }}
   <h1>Find your Food Truck</h1>
 
   {% for truck in truck_list %}
   <div class="">
-    {{ truck.truck_name }}
+    <a href="{% url 'foodtruck_detail_view' truck.id %}">{{ truck }}</a>
     <blockquote>
       <p>
         Type: {{ truck.category.food_type }}
