still adding url's to start get functionality

--- a/templates/foodtruck/foodtruck_list.html
+++ b/templates/foodtruck/foodtruck_list.html
@@ -5,7 +5,15 @@
   {% for food in menu %}
     <div>
       {{ food.food }}
-      ${{ food.price }}
+      {% if request.user == food.truck.driver %}
+        <a href="{% url 'food_update_view' food.id %}">Update Food</a>
+      {% endif %}
+      <blockquote>
+        ${{ food.price }}
+        {% if request.user == food.truck.driver %}
+          <a href="{% url 'price_update_view' food.id %}">Update Price</a>
+        {% endif %}
+      </blockquote>
     </div>
   {% endfor %}
 {% endblock %}
