--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,9 @@
       <p>
         Latitude: {{ truck.latitude }}<br>
         Longitude: {{ truck.longitude }}
+        {% if request.user == truck.driver %}
+          <a href="{% url 'location_update_view' truck.id %}">Move Location</a>
+        {% endif %}
       </p>
     </blockquote>
   </div>
