--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,11 @@
 
     {% if not request.user.is_authenticated %}
       <a href="{% url 'login' %}">Login</a>
-      <a href="{% url 'user_create_view' %}">Create New Driver</a>
+      <a href="{% url 'user_create_view' %}">Create New User</a>
     {% else %}
       <a href="{% url 'category_create_view' %}">New Food Category</a>
       <a href="{% url 'foodtruck_create_view' %}">New Food Truck</a>
+      <a href="{% url 'commenter_create_view' %}">New Commenter</a>
       <a href="{% url 'menu_create_view' %}">New Food Item</a>
       <a href="{% url 'logout' %}?next={% url 'index_view' %}">Logout</a>
     {% endif %}
