threw my map in there now

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Foodtruck Finder</title>
+    <style>
+      #map {
+        height: 450px;
+        width: 50%;
+        float: right;
+       }
+    </style>
   </head>
   <body>
 
