--- a/templates/index.html
+++ b/templates/index.html
@@ -35,15 +35,19 @@
     </blockquote>
   </div>
   {% endfor %}
+
+
+
   <div id="map"></div>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
         <script type="text/javascript">
           // var lat = {{ location.lat }};
           // var lng = {{ location.lng }};
           function initMap() {
-            var location = [{lat: 34.852619, lng: -82.394012},
-                            {lat: 34.8625, lng: -82.3857},
-                            {lat: 34.85521, lng: -82.38909},
-                            {lat: 34.8623, lng: -82.39112}];
+            // var location = [{lat: 34.852619, lng: -82.394012},
+            //                 {lat: 34.8625, lng: -82.3857},
+            //                 {lat: 34.85521, lng: -82.38909},
+            //                 {lat: 34.8623, lng: -82.39112}];
             // var location = [];
             // for (var x = 0; x <= location_list.length; x++ ){
             //   location.push({{x.lat}}, {{x.lng}});
@@ -52,12 +56,20 @@
               zoom: 15,
               center: {lat: 34.8574, lng: -82.390189},
             });
-            for (var i = 0; i < location.length; i++) {
-              var marker = new google.maps.Marker({
-                position: location[i],
-                map: map
-              });
-            }
+            var latlng = $.getJSON("http://localhost:8000/api/foodtrucks/", function(result) {
+              console.log(result)
+              var icon = "https://upload.wikimedia.org/wikipedia/commons/5/55/Question_Mark.svg"
+              for (var i = 0; i < result.length; i++) {
+                console.log(i);
+                var obj = result[i];
+                var marker = new google.maps.Marker({
+                  position: new google.maps.LatLng(obj.latitude, obj.longitude),
+                  icon: icon,
+                  map: map
+                });
+              }
+            });
+
           }
       </script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJ2GhgOOCaoypV0JCC4NnxS-M0enWpN64&callback=initMap">
