--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,11 @@
         height: 450px;
         width: 50%;
         float: right;
-       }
+      }
+      img {
+        height: 350px;
+        width: 370px;
+      }
     </style>
   </head>
   <body>
