--- a/templates/index.html
+++ b/templates/index.html
@@ -58,34 +58,35 @@
               center: {lat: 34.8574, lng: -82.390189},
             });
             var latlng = $.getJSON("http://localhost:8000/api/foodtrucks/", function(result) {
-              console.log(result)
+              // console.log(result)
               var icon = {url: "https://upload.wikimedia.org/wikipedia/commons/5/55/Question_Mark.svg",
                           size: new google.maps.Size(20, 32),
                           origin: new google.maps.Point(0, 0),
                           anchor: new google.maps.Point(17, 34),
                           scaledSize: new google.maps.Size(30, 32)};
               for (var i = 0; i < result.length; i++) {
-                console.log(i);
+                // console.log(i);
                 var obj = result[i];
                 if (obj.checked_in == true) {
                   var marker = new google.maps.Marker({
                     position: new google.maps.LatLng(obj.latitude, obj.longitude),
                     icon: icon,
-                    map: map
-                  });
-                  var infowindow = new google.maps.InfoWindow({
+                    map: map,
                     content: obj.truck_name
                   });
-                  google.maps.event.addListener(marker, 'click', function() {
-                    infowindow.open(map, marker);
-                  })
+                  var infowindow = new google.maps.InfoWindow();
+                  google.maps.event.addListener(marker, 'click', (function(marker, i, infowindow) {
+                    return function() {
+                      infowindow.setContent(this.content);
+                      infowindow.open(map, this);
+                    };
+                  })(marker, i, infowindow));
+                  // bounds.extend(marker.position);
+                  google.maps.event.trigger(marker, 'click');
                 }
               }
             });
-
           }
-          // google.maps.event.addDomListener(window, 'load', initialize);
-
       </script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJ2GhgOOCaoypV0JCC4NnxS-M0enWpN64&callback=initMap">
     </script>
