--- a/templates/foodtruck/foodtruck_detail.html
+++ b/templates/foodtruck/foodtruck_detail.html
@@ -16,8 +16,8 @@
       </blockquote>
     </div>
   {% endfor %}
-    <img src="{{ MEDIA_URL }}{{ truck_list.image_url }}" alt="Picture of {{ truck_list.image_url }}" />
-  {% for comment in truck_list.get_comment %}
+    <img src="{{ MEDIA_URL }}{{ object.image_url }}" alt="Picture of {{ object.image_url }}" />
+  {% for comment in object.get_comment %}
     <div>
       {{ comment.comment }}
     </div>
