--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,9 @@
         height: 60px;
         width: 60px;
       }
-
+      .truck_listing {
+        
+      }
     </style>
   </head>
   <body>
