--- a/templates/foodtruck/commenter_form.html
+++ b/templates/foodtruck/commenter_form.html
@@ -4,6 +4,6 @@
   <form class="" action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" name="" value="New Driver!">
+    <input type="submit" name="" value="Commenter">
   </form>
 {% endblock %}
