working on my map in heroku

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
               center: {lat: 34.85073, lng: -82.39898},
             });
             // var geocoder = new google.maps.Geocoder;
-            var latlng = $.getJSON("http://localhost:8000/api/foodtrucks/", function(result) {
+            var latlng = $.getJSON("https://powerful-brook-42988.herokuapp.com/api/foodtrucks/", function(result) {
               // console.log(result)
 
               // Create a custom marker
