changed icons to specific truck and now working on semantic

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,14 +6,15 @@
     <title>Foodtruck Finder</title>
 
     <link type="text/css" rel="stylesheet" href="{% static 'semantic.css' %}"  media="screen"/>
-
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <link rel="text/javascript" rel="stylesheet" href="{% static 'semantic.js' %}" media="screen">
     <style>
       .body {
         padding: 25px;
       }
       #map {
         height: 450px;
-        width: 50%;
+        width: 125%;
         float: right;
       }
       img {
@@ -26,9 +27,7 @@
         height: 60px;
         width: 60px;
       }
-      .truck_listing {
-        
-      }
+
     </style>
   </head>
   <body>
