--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
       }
       #map {
         height: 450px;
-        /*width: 125%;*/
+        width: 125%;
         float: right;
       }
       img {
